PN-2289 aggiunti altri test multidestinatario